# qxf2qif

./: CMakeLists.txt  qxf2qif.cpp
